core/gitops-controller/argocd-olm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
