core/gitops-controller/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.apps.lab.lan`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      # Route gRPC traffic based on content-type header
      match: Host(`argocd.apps.lab.lan`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
